--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1>My Bookmarks</h1>
     <nav>
-    <button type="submit" id="display-form" class="new-bookmark">New Bookmark</button>
+    <button type="submit" id="display-form" class="display-form">New Bookmark</button>
     <select name="rating-filter" id="rating-filter">
         <option value selected>Minimum Rating</option>
         <option value="5">⭑⭑⭑⭑⭑</option>
@@ -32,7 +32,6 @@
     </ul>
     </section>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="index.js"></script>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
   <script type="text/javascript" src="scripts/api.js"></script>
