finished working demo

--- a/htmlwireframe/index.html
+++ b/htmlwireframe/index.html
@@ -39,7 +39,7 @@
         </li>
 
         <li data-bookmark-id="#" class="bookmark">
-        <button id="delete" class="delete"><img src="trash.png"></button>
+        <button id="delete" class="delete"><img src="trash.png" alt="trash can"></button>
         <div data-bookmark-id="#" class="bookmark-collapse"></div>
         <h3>My First Bookmark</h3>
         <p>⭑⭑⭑⭑⭑</p>
