--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     </section>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="scripts/api.js"></script>
-  <script type="text/javascript" src="scripts/store.js"></script>
-  <script type="text/javascript" src="scripts/bookmark-item.js"></script>
-  <script type="text/javascript" src="scripts/bookmark-list.js"></script>
-  <script type="text/javascript" src="scripts/bookmark-form.js"></script>
-  <script type="text/javascript" src="scripts/index.js"></script>
+  <script type="text/javascript" src="api.js"></script>
+  <script type="text/javascript" src="store.js"></script>
+  <script type="text/javascript" src="bookmark.js"></script>
+  <script type="text/javascript" src="list.js"></script>
+  <script type="text/javascript" src="form.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 
 </body>
 </html>
